Reformat to 3 pages.

--- a/project_2.Rmd
+++ b/project_2.Rmd
@@ -6,15 +6,12 @@ output: pdf_document
 ---
 
 # Abstract
-In this project, we're going to analyze the ToothGrowth data in the R datasets package. After loading the dataset into R, explanatory analyses are carried out to determine the main trends in the data. In the second parts, statistical methods are applied to confirm or reject these trends.
-
-The source code to this report is hosted on [github](https://github.com/learner42/statinference-011/blob/master/project_2.Rmd).
+In this project, we're going to analyze the ToothGrowth data in the R datasets package. After loading the dataset into R, explanatory analyses are carried out to determine the main trends in the data. In the second parts, statistical methods are applied to confirm or reject these trends. The source code to this report is hosted on [github](https://github.com/learner42/statinference-011/blob/master/project_2.Rmd).
 
 # Load the data
 The data can be loaded via the usual commands.
 ```{r}
-library(datasets)
-data(ToothGrowth)
+library(datasets) ; data(ToothGrowth)
 ```
 Via the help command ``?ToothGrowth`` we know that the dataset contains the length of odontoblasts (teeth) in each of 10 guinea pigs at each of three dose levels of Vitamin C (0.5, 1, and 2 mg) with each of two delivery methods (orange juice or ascorbic acid). 
 
